🐛  correctly hide links on mobile resolution

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -52,7 +52,7 @@ button {
 
 // Visibility
 
-.hide-for-mobile {
+div.hide-for-mobile {
     // hide for tablet and mobile
     @include breakpoint-down(medium) {
         display: none;
